add a new button that reverts the color to original

--- a/mastering-git/index.html
+++ b/mastering-git/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- <button style="display: block; margin: 20px auto;">Press me</button> -->
 </body>
 </html>
 <script>
@@ -22,6 +22,9 @@
             <p id="colorCode" style="font-size: 24px; font-weight: bold;"></p>
             <button onclick="location.reload()" style="padding: 10px 20px; font-size: 16px; cursor: pointer;">
                 Generate New Color
+                <button onclick="document.body.style.backgroundColor = '#008080';" style="padding: 10px 20px; font-size: 16px; cursor: pointer;">
+                    Press Me
+                </button>
             </button>
         </div>
     `;
