add a new button to revert to orange

--- a/mastering-git/index.html
+++ b/mastering-git/index.html
@@ -20,6 +20,9 @@
         <div style="text-align: center; padding: 50px;">
             <h1>Random Color Generator</h1>
             <p id="colorCode" style="font-size: 24px; font-weight: bold;"></p>
+            <button onclick="document.body.style.backgroundColor='orange'; document.getElementById('colorCode').textContent='orange';" style="padding: 10px 20px; font-size: 16px; cursor: pointer; margin-left: 10px;">
+                Press me
+            </button>
             <button onclick="location.reload()" style="padding: 10px 20px; font-size: 16px; cursor: pointer;">
                 Generate New Color
             </button>
