Branch B change to heading

--- a/mastering-git/index.html
+++ b/mastering-git/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <button style="display: block; margin: 20px auto;">Press me</button> -->
+    <h1>Random Color Generator — Branch B Edition</h1>
+
 </body>
 </html>
 <script>
